# forge-fleet

./: LEGACY_FREEZE.md  README.md  docker-compose.postgres.yml  forgefleet_subagent.py  pyproject.toml  requirements.txt
config/: fleet.json
crates/ff-agent/src/: agent_loop.rs  commands_extended.rs  compaction.rs
crates/ff-agent/src/tools/: bash.rs  mod.rs  research_ext.rs  uiux.rs
crates/ff-terminal/src/: app.rs  main.rs  render.rs
dashboard/src/: App.tsx
dashboard/src/components/: EmptyState.tsx  Header.tsx  Sidebar.tsx  Skeleton.tsx
dashboard/src/pages/: ChatStudio.tsx  ModelHub.tsx  ToolInventory.tsx
docs/: ARCHITECTURE.md
forgefleet/: config.py  mcp_server.py
forgefleet/engine/: __init__.py  agent.py  autonomous.py  cluster.py  content.py  daemon.py  db.py  discovery.py  errors.py  execution_tracking.py  fleet_router.py  hot_reload.py  lifecycle.py  mc_client.py  openclaw_bridge.py  ownership.py  permissions.py  pipeline.py  prompt_templates.py  sandbox.py  self_update.py  seniority.py  skill_loader.py  state_machine.py  status_reporter.py  task_decomposer.py  tool_executor.py  tool_registry.py  workload_manager.py
forgefleet/orchestrator/: fleet_discovery.py
src/: main.rs
src/agent_loop/: strands_agent.py
src/orchestrator/: __init__.py  fleet_discovery.py  pipeline.py
