[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgefleet"
version = "0.1.0"
description = "Distributed AI coding agent orchestration"
requires-python = ">=3.11"
dependencies = [
  "psycopg",
]

[project.optional-dependencies]
ai = [
  "crewai",
  "pydantic",
  "aider-chat",
]

[project.scripts]
forgefleet = "forgefleet.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forgefleet*"]
